--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
     <head>
-            <a href='/'>What's on your mind? Add a Blog!</a>
-            <a href='/blogs'>Blog Compendium</a>
+            
         <title>{{title}}</title>
     </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=True) %}
+    <ul>
+    {% for category,message in messages %}
+        <li class="{{category}}">{{message}}</li>
+    {% endfor %}
+    </ul>
+    {% endwith %}
 
     {% block content %}
     {% endblock %}
