--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<a href='/'>What's on your mind? Add a Blog!</a>
+<a href='/blogs'>Blog Compendium</a>
+<a href='/userlibrary'>User Library</a>
+<a href='/logout'>Logout</a>
     <h1>Write your blog!</h1>
     <form method='post'>
         <label>
             New Blog Title:
-            <input type="text" name='title' value = '{{btitle}}' />
+            <input type="text" name='title' value = '{{stitle}}' />
         </label>
-        {{titlee}}
+        {{tit_err}}
         <br>
             New blog:
             <textarea name='blog' rows="10" cols="30" >{{body}}</textarea> 
-            {{bloge}}
+            {{blog_err}}
         <br>      
         <input type="submit" value='Add Blog' />
     </form>
