--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a href='/'>What's on your mind? Add a Blog!</a>
+<a href='/blogs'>Blog Compendium</a>
+<a href='/userlibrary'>User Library</a>
+<a href='/logout'>Logout</a>
     <h1>{{blog.title}}</h1>
     <h2>{{blog.body}}</h2>
     
